--- a/test/templates/info-label/index.njk
+++ b/test/templates/info-label/index.njk
@@ -9,16 +9,16 @@
     <!-- output the component example and the code snippet -->
     {% set example %}
 {{  infolabel({label: "6"},
-        modifier={block: ["numeric","accentcolor1"]})
+        modifier={block: ["numeric","accent-color-1"]})
 }}
 {{  infolabel({label: "9.2"},
-        modifier={block: ["numeric","accentcolor2"]})
+        modifier={block: ["numeric","accent-color-2"]})
 }}
 {{  infolabel({label: "42k"},
-        modifier={block: ["numeric","accentcolor3"]})
+        modifier={block: ["numeric","accent-color-3"]})
 }}
 {{  infolabel({label: "Default"},
-        modifier={block: ["accentcolor3"]})
+        modifier={block: ["accent-color-3"]})
 }} 
     {% endset %}
     {{ format(example) }}
@@ -28,34 +28,34 @@
 
     {% set example %}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor1"]})
+        modifier={block: ["accent-color-1"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor2"]})
+        modifier={block: ["accent-color-2"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor3"]})
+        modifier={block: ["accent-color-3"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor4"]})
+        modifier={block: ["accent-color-4"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor5"]})
+        modifier={block: ["accent-color-5"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor6"]})
+        modifier={block: ["accent-color-6"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor7"]})
+        modifier={block: ["accent-color-7"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor8"]})
+        modifier={block: ["accent-color-8"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor9"]})
+        modifier={block: ["accent-color-9"]})
 }}
 {{  infolabel({label: "Info Label"},
-        modifier={block: ["accentcolor10"]})
+        modifier={block: ["accent-color-10"]})
 }}
 
     {% endset %}
@@ -66,34 +66,34 @@
 
     {% set example %}
 {{  infolabel({label: "Info Label",icon: 'future'},
-        modifier={block: ["accentcolor1","icon"]})
+        modifier={block: ["accent-color-1","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'add-activity-2'},
-        modifier={block: ["accentcolor2","icon"]})
+        modifier={block: ["accent-color-2","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'bar-code'},
-        modifier={block: ["accentcolor3","icon"]})
+        modifier={block: ["accent-color-3","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'time-entry-request'},
-        modifier={block: ["accentcolor4","icon"]})
+        modifier={block: ["accent-color-4","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'bubble-chart'},
-        modifier={block: ["accentcolor5","icon"]})
+        modifier={block: ["accent-color-5","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'hide'},
-        modifier={block: ["accentcolor6","icon"]})
+        modifier={block: ["accent-color-6","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'key'},
-        modifier={block: ["accentcolor7","icon"]})
+        modifier={block: ["accent-color-7","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'technical-object'},
-        modifier={block: ["accentcolor8","icon"]})
+        modifier={block: ["accent-color-8","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'upload-to-cloud'},
-        modifier={block: ["accentcolor9","icon"]})
+        modifier={block: ["accent-color-9","icon"]})
 }}
 {{  infolabel({label: "Info Label",icon: 'upload-to-cloud'},
-        modifier={block: ["accentcolor10","icon"]})
+        modifier={block: ["accent-color-10","icon"]})
 }}
     {% endset %}
     {{ format(example) }}
