--- a/test/templates/info-label/component.njk
+++ b/test/templates/info-label/component.njk
@@ -4,7 +4,7 @@ infolabel:
     modifier={ block: [] }
 -->
 {% macro infolabel(properties={}, modifier={}, classes=[]) -%}
-<span class="fd-info-label{{ modifier.block | modifier('info-label') }}{{ ' sap-icon--'+properties.icon if properties.icon }}{{classes|classes}}" style="line-height: 2rem;">
+<span class="fd-info-label{{ modifier.block | modifier('info-label') }}{{ ' sap-icon--'+properties.icon if properties.icon }}{{classes|classes}}" style="margin-top: 10px;">
     {{properties.label}}
 </span><br>
 {%- endmacro %}
