--- a/test/templates/info-label/index.njk
+++ b/test/templates/info-label/index.njk
@@ -92,8 +92,8 @@
 {{  infolabel({label: "Info Label",icon: 'upload-to-cloud'},
         modifier={block: ["accent-color-9","icon"]})
 }}
-{{  infolabel({label: "Info Label",icon: 'upload-to-cloud'},
-        modifier={block: ["accent-color-10","icon"]})
+{{  infolabel({icon: 'upload-to-cloud'},
+        modifier={block: ["accent-color-10","only-icon"]})
 }}
     {% endset %}
     {{ format(example) }}
